// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GovBanner component > static content > renders consistently in English for .gov sites 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="/node_modules/@uswds/uswds/dist/img/us_flag_small.png"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
        data-testid="grid"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-dot-gov.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-https.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A
               
              <strong>
                lock (
                <svg
                  aria-label="Locked padlock icon"
                  className="usa-icon"
                  focusable={false}
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                  />
                </svg>
                )
              </strong>
               
              or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the
               
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component > static content > renders consistently in English for .mil sites 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="/node_modules/@uswds/uswds/dist/img/us_flag_small.png"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
        data-testid="grid"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-dot-gov.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .mil
              </strong>
              <br />
              A 
              <strong>
                .mil
              </strong>
               website belongs to an official U.S. Department of Defense organization.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-https.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .mil websites use HTTPS
              </strong>
              <br />
              A
               
              <strong>
                lock (
                <svg
                  aria-label="Locked padlock icon"
                  className="usa-icon"
                  focusable={false}
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                  />
                </svg>
                )
              </strong>
               
              or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the
               
              .mil
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component > static content > renders consistently in Spanish for .gov sites 1`] = `
<section
  aria-label="Un sitio oficial del Gobierno de Estados Unidos"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="/node_modules/@uswds/uswds/dist/img/us_flag_small.png"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
        data-testid="grid"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-dot-gov.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .gov
              </strong>
              <br />
              Un sitio web 
              <strong>
                .gov
              </strong>
               pertenece a una organización oficial del Gobierno de Estados Unidos.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-https.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .gov usan HTTPS
              </strong>
              <br />
              Un
               
              <strong>
                candado (
                <svg
                  aria-label="Icono de candado cerrado"
                  className="usa-icon"
                  focusable={false}
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                  />
                </svg>
                )
              </strong>
               
              o 
              <strong>
                https://
              </strong>
               significa que usted se conectó de forma segura a un sitio web 
              .gov
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component > static content > renders consistently in Spanish for .mil sites 1`] = `
<section
  aria-label="Un sitio oficial del Gobierno de Estados Unidos"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="/node_modules/@uswds/uswds/dist/img/us_flag_small.png"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
        data-testid="grid"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-dot-gov.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .mil
              </strong>
              <br />
              Un sitio web 
              <strong>
                .mil
              </strong>
               pertenece a una organización oficial del Departamento de Defensa de EE. UU.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-https.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .mil usan HTTPS
              </strong>
              <br />
              Un
               
              <strong>
                candado (
                <svg
                  aria-label="Icono de candado cerrado"
                  className="usa-icon"
                  focusable={false}
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                  />
                </svg>
                )
              </strong>
               
              o 
              <strong>
                https://
              </strong>
               significa que usted se conectó de forma segura a un sitio web 
              .mil
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component > static content > renders consistently with default props 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="/node_modules/@uswds/uswds/dist/img/us_flag_small.png"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
        data-testid="grid"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-dot-gov.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            src="/node_modules/@uswds/uswds/dist/img/icon-https.svg"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A
               
              <strong>
                lock (
                <svg
                  aria-label="Locked padlock icon"
                  className="usa-icon"
                  focusable={false}
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                  />
                </svg>
                )
              </strong>
               
              or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the
               
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
